--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <nav class="navigation">
-        <a href="logo"><img src="./assets/img/logo.png" alt="Logo" /></a>
+        <a href="#"><img src="./assets/img/logo.png" alt="Logo" /></a>
 
         <ul class="nav-menu">
           <li class="nav-item"><a href="#">HOME</a></li>
