--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             nihil? Enim, repellat? Libero eligendi voluptatibus adipisci sunt,
             modi quia eum veritatis doloremque.
           </p>
-          <a href="#"></a>
+          <a href="#">Learn More</a>
         </div>
 
         <div class="content-img">
